bug fixed: last location check should be disabled when using a queue with a folder